# zeus

./: .gitignore  .readthedocs.yaml  .travis.yml  README.md  SUMMARY.md  far.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: release_to_pypi.yml  setup_and_run_tests.yml
docs/: api.rst  conf.py  cookbook.rst  faq.rst  index.rst  requirements.txt
docs/_build/doctrees/: api copy.doctree  api.doctree  cookbook.doctree  environment.pickle  examples.doctree  faq.doctree  index.doctree  normal_dist.doctree  normal_distribution.doctree  tutorials.doctree
docs/_build/html/: .buildinfo  api.html  cookbook.html  examples.html  faq.html  genindex.html  index.html  normal_dist.html  (+9 more)
docs/_static/: default.css
docs/api/: callbacks.rst  moves.rst  sampler.rst
docs/notebooks/: MPI.ipynb  convergence.ipynb  datafit.ipynb  multiprocessing.ipynb  normal_distribution.ipynb
examples/: comparison_funnel-Copy1.ipynb  funnel.ipynb  normal_distribution.ipynb  normal_distribution_prior.ipynb  zeus-vs-emcee-rosenbrock.ipynb  zeus-vs-emcee.ipynb  zeus_mpi.py
examples/.ipynb_checkpoints/: normal_distribution-checkpoint.ipynb  zeus-vs-emcee-checkpoint.ipynb  zeus-vs-emcee-rosenbrock-checkpoint.ipynb
tests/: test_autocorr.py  test_samples.py
zeus/: __init__.py  _version.py  autocorr.py  callbacks.py  diagnostics.py  ensemble.py  fwrapper.py  moves.py  parallel.py  pbar.py  plotting.py  samples.py  start.py  zeus.py
zeus/tests/: test_autocorr.py  test_fwrapper.py  test_sampler.py  test_samples.py  test_start.py
zeus_mcmc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+69 files in other folders)
